crates/pg_syntax/tests/snapshots/postgres_regress/returning@52.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO joinme VALUES('zoo2', 54321);"
---
InsertStmt@0..41
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "joinme"
  Whitespace@18..19 " "
  SelectStmt@19..39
    Values@19..25 "VALUES"
    Ascii40@25..26 "("
    List@26..39
      AConst@26..32
        Sconst@26..32 "'zoo2'"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AConst@34..39
        Iconst@34..39 "54321"
  Ascii41@39..40 ")"
  Ascii59@40..41 ";"

