crates/pg_syntax/tests/snapshots/postgres_regress/returning@53.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO joinme VALUES('other', 0);"
---
InsertStmt@0..38
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "joinme"
  Whitespace@18..19 " "
  SelectStmt@19..36
    Values@19..25 "VALUES"
    Ascii40@25..26 "("
    List@26..36
      AConst@26..33
        Sconst@26..33 "'other'"
      Ascii44@33..34 ","
      Whitespace@34..35 " "
      AConst@35..36
        Iconst@35..36 "0"
  Ascii41@36..37 ")"
  Ascii59@37..38 ";"

